2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Fix GCC 4.3.0 warnings.
	* src/ucommandqueue.cc: Fix GCC 4.3.0 warnings.
	* src/userver.cc: Fix GCC 4.3.0 warnings.

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Fix incorrect function name in prototype.
	* include/kernel/userver.hh: Function was incorrectly prototyped
	as debug() instead of vdebug().

2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Cleanup macro usage.
	* src/ast/flavor.cc (operator<<): Factor << operator into the
	macro.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	merge -r 2222:2227 https://svn.gostai.com/svn/kernel1/trunk
	2008-01-03  Akim Demaille  <demaille@gostai.com>
	A single config.h.
	The kernel used to create src/config.h, and sdk creates sdk/config.h.
	But Autoconf does not support multiple AC_CONFIG_HEADERS, so we keep
	only sdk's one.
	* configure.ac: No longer (pretend to) create src/config.h.
	* src/console-server.cc: Don't include unistd.h but libport's one.
	* src/parser/parser.mk, src/ubanner.cc: Find config.h in sdk.
	* src/ucommand.cc, src/userver.cc: Don't include config.h uselessly.

	2008-01-03  Akim Demaille  <demaille@gostai.com>
	Complete externals.
	* Makefile.am (SVN_EXTERNALS): Complete.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	k2 is green.
	* tests-local.mk: We don't pass blocking-comma because we don't
	have a sound "wait" implementation.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	merge -r 2194:2222 https://svn.gostai.com/svn/kernel1/trunk

	2008-01-03  Akim Demaille  <demaille@gostai.com>
	Don't fuse install-exec-local and install-data-hook.
	* src/Makefile.am: Revert partially the previous change.

	2008-01-03  Akim Demaille  <demaille@gostai.com>
	Put most of urbi-console in libkernel.
	* src/urbi-console.cc: New.
	* src/Makefile.am: Use it.
	(libkernel): Now include everything that used to be source of
	urbi-console.
	This is so that we can use libkernel to create small engines, to test
	plugged components.